Updates from tarball smack-util-0.1.tar with sha1sum 4d369304c3aa85024893e672d4373dc3cf06d45d.

--- a/README
+++ b/README
@@ -52,7 +52,13 @@ smackrecvmsg.c
 
 A handy function that acts like recvmsg() but that passes back
 the Smack label on the message, assuming all required setup has
-been done. The sole contents of libsmack.a so far.
+been done. In libsmack.a.
+
+smackaccess.c
+
+Userspace function that reports what the kernel would for
+an access request. Reads rules from /smack/load once, remembering
+what it got for subsequent calls in the process. In libsmack.a.
 
 Makefile
 
